--- a/canvasPaint/war/WEB-INF/web.xml
+++ b/canvasPaint/war/WEB-INF/web.xml
@@ -4,5 +4,14 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  
+
+    <servlet>
+        <servlet-name>SendMessage</servlet-name>
+        <servlet-class>com.canvas.SendMessage</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>SendMessage</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
